<package>
	<name>libminiking</name>
	<version>0.1.0</version>
	<description>This package implements a library to interact with the MiniKing Sonar, from Tritech.</description>

	<maintainer email="emilio.garcia@uib.es">Emilio Garcia-Fidalgo</maintainer>
	<author email="emilio.garcia@uib.es">Emilio Garcia-Fidalgo</author>	
	<license>BSD</license>
	<url type="website">http://wiki.ros.org/miniking</url>

	<buildtool_depend>catkin</buildtool_depend>
</package>
